styles/itemsdisplay.css
.main-display {
    background-color: rgb(141, 189, 86);
}

.text {
    padding: 1.5em;
    font-family: Arial, Helvetica, sans-serif;
}

.categories-img {
  width: 28vw;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  border-radius: 5px;
}

.categories {
    margin: 5px;
}

.link-to-category {
    float: left;
}

